Button Looklike Button

--- a/index.html
+++ b/index.html
@@ -33,5 +33,10 @@
           </svg>
         </button>
       </div>
+
+      /* From Uiverse.io by Pradeepsaranbishnoi */ 
+
+  <input name="switch" id="switch" type="checkbox">
+  <label class="switch" for="switch"></label>
 </body>
 </html>
